# rsstify

./: .env.example  .gitignore  Cargo.toml
src/: main.rs
