[package]
name = "rsstify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.28"
reqwest = "0.11.16"
rss = "2.0.3"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
